--- a/website/templates/about.html
+++ b/website/templates/about.html
@@ -175,7 +175,7 @@
 
 
 
-<div class="section sec-team sec-4 pb-5">
+<!-- <div class="section sec-team sec-4 pb-5">
 	<div class="container">
 		<div class="row mb-5">
 			<div class="col-lg-6 mx-auto text-center">
@@ -256,7 +256,7 @@
 		</div>
 
 	</div>
-</div>
+</div> -->
 
 
 
